<resources>
    <string name="app_name">Foodmash</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_email_phone">Email &amp; Phone</string>
    <string name="menu_addresses">Addresses</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_wallet_cash">Wallet Cash</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_log_out">Log Out</string>

    <string name="sign_in">Sign In</string>
    <string name="back_icon">Back Icon</string>
    <string name="skip">skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_edit_text_hint">Your name</string>
    <string name="email_or_phone_edit_text_hint">Email or Phone</string>
    <string name="phone_prefix_edit_text_hint">+91</string>
    <string name="phone_edit_text_hint">10 digit mobile number</string>
    <string name="password_edit_text_hint">password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="help_icon">Help Icon</string>
    <string name="add_icon">Add Icon</string>
    <string name="deliver_icon">Deliver Icon</string>
    <string name="login">login</string>
    <string name="accept_terms_and_conditions"><![CDATA[I accept terms & conditions]]></string>
    <string name="user">Register Icon</string>
    <string name="register">register</string>
    <string name="for_1">For 1</string>
    <string name="for_2">For 2</string>
    <string name="for_3">For 3</string>
    <string name="for_1_focus">For 1 Focus</string>
    <string name="for_2_focus">For 2 Focus</string>
    <string name="for_3_focus">For 3 Focus</string>
    <string name="cart_header">Cart</string>
    <string name="back">back</string>
    <string name="buy">buy</string>
    <string name="buy_icon">Buy Icon</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm">confirm</string>
    <string name="cart">cart</string>
    <string name="add_address">Add Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_debit_cart">Credit / Debit Card</string>
    <string name="net_banking">Netbanking</string>
    <string name="address">address</string>
    <string name="pay_icon">Pay Icon</string>
    <string name="pay">pay</string>
    <string name="logo">Logo</string>
    <string name="combo_image">Combo Image</string>
    <string name="combo_name_lorem_ipsum">Combo Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_default">1</string>
    <string name="rupee">₹</string>
    <string name="price_lorem_ipsum">0</string>
    <string name="name_lorem_ipsum">Name Here</string>
    <string name="address_lorem_ipsum">Address Line 1,\nAddress Line 2,\nCity, 600000</string>
    <string name="phone_lorem_ipsum">+91 9876 543210</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="food_image">Food Image</string>
    <string name="food_name_lorem_ipsum">Food Name</string>
    <string name="food_description_lorem_ipsum">Food Description Lorem Ipsum imperialum huser tufes somerum geritum levitatum historum kingstom</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="combo_description_lorem_ipsum">Combo Description Lorem Ipsum imperialum huser tufes somerum geritum levitatum historum kingstom</string>
    <string name="offers_focus">offers_focus</string>
    <string name="offers">offers</string>
    <string name="save">save</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="email_and_phone">Email and Phone</string>
    <string name="landline_prefix_edit_text_hint">44</string>
    <string name="landline">landline</string>
    <string name="receive_promotional_offers">Receive promotional offers</string>
    <string name="order_history">Order History</string>
    <string name="api_root_path">http://192.168.101.12:3000/api/v1</string>
    <!--<string name="api_root_path">http://10.0.3.2:3000/api/v1</string>-->
    <!--<string name="api_root_path">http://www.foodmash.in/api/v1</string>-->
    <string name="login_later">Login Later</string>
    <string name="name">name</string>
    <string name="issue_feedback">Issue or Feedback</string>
    <string name="description">Description</string>
    <string name="from">from</string>
    <string name="restaurant">Restaurant</string>
    <string name="dish_name">Dish Name</string>
    <string name="selected">selected</string>
    <string name="empty_cart_title">Aren\'t you hungry?</string>
    <string name="empty_cart_description">You didn\'t add any combos to the cart</string>
    <string name="email_edit_text_hint">someone@mailbox.com</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="paid_using">Paid using</string>
    <string name="orders">orders</string>
    <string name="home">home</string>
    <string name="label">label</string>
    <string name="count_ipsum_lorem">99</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">add</string>
    <string name="added_to_cart">ADDED TO CART</string>
    <string name="offer">offer</string>
    <string name="taste">taste</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="add_extra">Add Extra</string>
    <string name="cart_count_lorem_ipsum">0</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="loading">Loading...</string>
    <string name="loading_description">We\'re loading as fast as we can</string>
    <string name="connecting">Connecting...</string>
    <string name="connecting_description">We\'re contacting the server</string>
    <string name="saving">Saving...</string>
    <string name="saving_description">We\'re saving your info in the server</string>
    <string name="contents">Contents</string>
    <string name="payment_card">card</string>
    <string name="payment_credit_card">credit_card</string>
    <string name="payment_debit_card">debit_card</string>
    <string name="payment_netbanking">netbanking</string>
    <string name="payment_cod">cod</string>
    <string name="ok">Ok</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card"> &#160;if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card"> &#160;if you don\'t have CVV and Expiry on your card</string>
    <string name="price_of_combo">Price of Combo</string>
    <string name="cart_amount">Cart Amount</string>
    <string name="change_password">Change Password</string>
    <string name="reset">Reset</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="open_navbar">Open Navbar</string>
    <string name="close_navbar">Close Navbar</string>
    <string name="menu_delete_cart">Delete Cart</string>
    <string name="scrollable_content">scrollable_content</string>
    <string name="log_in">Log In</string>
    <string name="contact_number">Contact Number</string>
    <string name="name_hint">Name</string>
</resources>
