<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@mipmap/user"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/menu_email_phone"
        android:title="@string/menu_email_phone"
        android:icon="@mipmap/mail"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/menu_addresses"
        android:title="@string/menu_addresses"
        android:icon="@mipmap/address"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/menu_order_history"
        android:title="@string/menu_order_history"
        android:icon="@mipmap/box"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/menu_wallet_cash"
        android:title="@string/menu_wallet_cash"
        android:icon="@mipmap/wallet"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item android:id="@+id/menu_contact_us"
        android:title="@string/menu_contact_us"
        android:icon="@mipmap/call"
        android:orderInCategory="6"
        app:showAsAction="never" />
    <item android:id="@+id/menu_log_out"
        android:title="@string/menu_log_out"
        android:icon="@mipmap/logout"
        android:orderInCategory="7"
        app:showAsAction="never" />
    <item android:id="@+id/menu_cart"
        android:title="@string/cart"
        android:icon="@mipmap/cart"
        android:orderInCategory="8"
        app:showAsAction="always" />
</menu>
