<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/svg_user1"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/menu_addresses"
        android:title="@string/menu_addresses"
        android:icon="@drawable/svg_marker"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/menu_order_history"
        android:title="@string/menu_order_history"
        android:icon="@drawable/svg_order"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/menu_contact_us"
        android:title="@string/menu_contact_us"
        android:icon="@drawable/svg_help"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item android:id="@+id/menu_log_out"
        android:title="@string/menu_log_out"
        android:icon="@drawable/svg_logout"
        android:orderInCategory="6"
        app:showAsAction="never" />
    <item android:id="@+id/menu_cart"
        android:title="@string/cart"
        app:actionLayout="@layout/menu_item_cart_count"
        android:orderInCategory="8"
        app:showAsAction="always" />
</menu>
