<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:singleLine="true" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#555"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payable_amount"
            android:textSize="17sp"
            android:layout_margin="15dp"
            android:textColor="@color/color_accent_white_bg" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textSize="20sp"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_lorem_ipsum"
                android:id="@+id/total"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/payment_mode_radio_group">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit_card"
                        android:id="@+id/credit_card"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:singleLine="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debit_card"
                        android:id="@+id/debit_card"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:singleLine="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/net_banking"
                        android:id="@+id/netbanking"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:singleLine="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_on_delivery"
                        android:id="@+id/cash_on_delivery"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:checked="true" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingRight="20dp"
            android:background="@drawable/button_flat_large_background"
            android:id="@+id/address">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back"
                android:contentDescription="@string/back_icon"
                android:tint="@color/color_accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp"
                android:textColor="@color/abc_primary_text_material_dark"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingRight="20dp"
            android:background="@drawable/button_flat_large_background"
            android:id="@+id/pay">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/pay"
                android:paddingRight="10dp"
                android:contentDescription="@string/pay_icon"
                android:tint="@color/color_accent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textSize="20sp"
                android:textColor="@color/abc_primary_text_material_dark"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>