<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_combo"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/image"
            android:contentDescription="@string/food_image"
            android:src="@drawable/png_image_default"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">
                <com.android.volley.toolbox.NetworkImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/restaurant_logo"
                    android:contentDescription="@string/restaurant_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"
                    android:id="@+id/restaurant_name"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_name_lorem_ipsum"
                        android:id="@+id/name"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/label"
                        android:src="@drawable/svg_label"
                        android:contentDescription="@string/label" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/taste"
                        android:src="@drawable/svg_spicy"
                        android:contentDescription="@string/taste"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_description_lorem_ipsum"
                    android:id="@+id/description"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:textSize="13sp"
                    android:ellipsize="end"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:fontFamily="sans-serif-light"
                    android:minLines="1"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count_layout"
                android:gravity="center_vertical|center_horizontal"
                android:layout_centerInParent="true"
                android:padding="10dp">

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:id="@+id/minus"
                    android:textSize="12sp"
                    android:background="@drawable/button_rounded_left_background"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/count_ipsum_lorem"
                    android:id="@+id/count"
                    android:textSize="12sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:background="@drawable/button_dark_background" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:id="@+id/plus"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded_right_background"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>