<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/tick"
        android:tint="@color/okay_green"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:id="@+id/selected"
        android:contentDescription="@string/selected"
        android:layout_marginRight="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_name"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:singleLine="true"
        android:id="@+id/option_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/restaurant_layout">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/next"
            android:tint="@color/color_accent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/from" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:id="@+id/restaurant_name"
            android:textSize="11sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>